Adds analytics
